--- a/libchips/CMakeLists.txt
+++ b/libchips/CMakeLists.txt
@@ -7,6 +7,8 @@ list(APPEND libchips_src
   src/logic-lynx.c
   src/logic-generic.c
   src/random.c
+  src/misc.c
+  src/format-ccl.c
 )
 
 # add_executable(libchips-cli ${libchips_src} src/main-cli.c)
